--- a/第一章 操作系统引论.md
+++ b/第一章 操作系统引论.md
@@ -18,7 +18,9 @@
 
 #### 2.OS作为计算机系统资源的管理者
 
-计算机系统中，归纳起来可以将这些资源分为四类：处理机，存储器，I/O设备以及文件（数据和程序）
+计算机系统中，归纳起来可以将这些资源分为四类：处理机，存储器，I/O设备以及文
+
+件（数据和程序）
 
 #### 3.OS实现了对计算机资源的抽象
 
@@ -54,7 +56,11 @@
 
 #### 1.单道批处理系统的处理过程
 
+一个作业接着一个作业的处理，直到完成所有作业
+
 #### 2.单道批处理系统的缺点
+
+系统中的资源得不到充分的利用，这是因为在内存中仅有一道程序，每逢该程序在运行中发出I/O请求后，CPU便处于等待状态，必须在其I/O完成后才能继续运行。
 
 ### 1.2.3 多道批处理系统
 
@@ -85,6 +91,8 @@
 
 #### 2.分时系统实现中的关键问题
 
+在多道批处理系统中，用户无法与自己的作业进行交互的主要原因是：作业都先驻留在外存上，即使以后被调入内存，也要经过较长时间的等待后方能运行，用户无法与自己的作业进行交互。为此，系统首先必须能提供多个终端，同时给多个用户使用，其次，当用户在自己的终端上键入命令时，系统能及时接收，并及时处理该命令，再将结果返回给用户。此后，用户可根据系统返回的响应情况，再继续键入下一条命令，此即人--机交互。亦即，允许有多个用户同时通过自己的键盘键入命令，系统也应能全部及时接受并处理。
+
 - 及时接收
 - 及时处理
 
@@ -112,10 +120,15 @@
 #### 3.实时系统与分时系统特征的比较
 
 - 多路性
+
+信息查询系统和分时系统中的多路性按分时原则为多个终端用户服务；实时控制系统的多路性则是指系统周期性的对多路现场进行采集，以及对多个对象或多个执行机构进行控制。
+
 - 独立性
 - 及时性
 - 交互性
 - 可靠性
+
+分时系统要求系统可靠，实时系统要求系统高度可靠，因为任何差错都可能带来无法预料的灾难性后果。
 
 ### 1.2.6 微机操作系统的发展
 
@@ -126,7 +139,12 @@
 
 #### 2.单用户多任务操作系统
 
+- Windows XP
+
 #### 3.多用户多任务操作系统
+
+- UNIX
+- LINUX
 
 ## 1.3 操作系统的基本特征
 
@@ -142,3 +160,177 @@
 
 ### 1.3.2 共享
 
+目前主要实现资源共享的方式有如下两种：
+
+#### 1.互斥共享方式
+
+当进程A要访问某资源时，必须先提出请求，若此时该资源空闲，系统便可将之分配给请求进程A使用。此后若再有其它进程也要访问该资源，只要A未用完就必须等待。仅当A进程访问完并释放系统资源后，才允许另一进程对该资源进行访问。
+
+#### 2.同时访问方式
+
+系统中还有另一类资源，允许在一段时间内由多个进程“同时”对它们进行访问。典型的可供多个进程“同时”访问的资源是磁盘设备。
+
+### 1.3.3 虚拟
+
+#### 1.时分复用技术
+
+根本原因在于，它利用某设备为一用户服务的空闲时间，又转去为其他用户提供服务，使设备得到最充分的利用
+
+- 虚拟处理机技术
+- 虚拟设备技术
+
+#### 2.空分复用技术
+
+空分复用技术则是利用存储器的空闲时间分区域存放和运行其他的多道程序，以此来提高内存的利用率。
+
+### 1.3.4 异步
+
+## 1.4 操作系统的主要功能
+
+### 1.4.1 处理机管理功能
+
+在传统的多道程序系统中，处理机的分配和运行都是以进程为基本单位的，因此对处理机的管理可归结为对进程的管理。
+
+#### 1.进程控制
+
+#### 2.进程同步
+
+#### 3.进程通信
+
+#### 4.调度
+
+- 作业调度
+- 进程调度
+
+### 1.4.2 存储器管理功能
+
+#### 1.内存分配
+
+#### 2.内存保护
+
+1. 确保每道用户程序都仅在自己的内存空间内运行，彼此互不干扰
+2. 绝不允许用户程序访问操作系统的程序和数据，也不允许用户程序转移到非共享的其他用户程序中去执行
+
+#### 3.地址映射
+
+#### 4.内存扩充
+
+内存扩充是借助于虚拟存储技术，从逻辑上扩充内存容量，使用户所感觉到的内存容量比实际内存容量大得多，以便让更多的用户程序能并发运行。为了能在逻辑上扩充内存，系统必须设置内存扩充机制（包含少量硬件），用于实现下述各功能：
+
+- 请求调入功能
+- 置换功能
+
+### 1.4.3 设备管理功能
+
+设备管理的主要任务如下：
+
+- 完成用户进程提出的I/O请求，为用户进程分配所需的I/O设备，并完成指定的I/O操作
+- 提高CPU和I/O设备的利用率，提高速度，方便用户使用I/O设备
+
+#### 1.缓冲管理
+
+#### 2.设备分配
+
+#### 3.设备处理
+
+设备处理程序又称为设备驱动程序。其基本任务是用于实现CPU和设备控制器之间的通信。
+
+### 1.4.4 文件管理功能
+
+#### 1.文件存储空间的管理
+
+#### 2.目录管理
+
+#### 3.文件的读/写管理和保护
+
+- 文件的读写管理
+- 文件保护
+
+### 1.4.5 操作系统与用户之间的接口
+
+#### 1.用户接口
+
+- 联机用户接口
+- 脱机用户接口
+- 图形用户接口
+
+#### 2.程序接口
+
+### 1.4.6 现代操作系统的新功能
+
+1. 系统安全
+2. 网络的功能和服务
+3. 支持多媒体
+
+## 1.5 OS结构设计
+
+### 1.5.1 传统操作系统结构
+
+#### 1.无结构操作系统
+
+OS第一代
+
+#### 2.模块化结构OS
+
+OS第二代
+
+#### 3.分层式结构OS
+
+### 1.5.2 客户/服务器模式简介
+
+客户/服务器模式可以简称为C/S模式。
+
+#### 1. 客户/服务器模式的由来，组成和类型
+
+主要由三部分组成：
+
+- 客户机
+- 服务器
+- 网络系统
+
+#### 2.客户/服务器之间的交互
+
+一次完整的交互过程可分成以下四步：
+
+- 客户发送请求消息
+- 服务器接收消息
+- 服务器回送消息
+- 客户机接受消息
+
+#### 3.客户/服务器模式的优点
+
+具有的优点
+
+- 数据的分布处理和存储
+- 便于集中管理
+- 灵活性和可扩充性
+- 易于改编应用软件
+
+不足之处是存在着不可靠性和瓶颈问题
+
+### 1.5.3 面向对象程序设计
+
+### 1.5.4 微内核OS结构
+
+#### 1.微内核操作系统的基本概念
+
+- 足够小的内核
+- 基于客户/服务器模式
+- 应用“机制与策略分离”原理
+- 采用面向对象技术
+
+#### 2.微内核的基本功能
+
+- 进程（线程）管理
+- 低级存储器管理
+- 中断和陷入处理
+
+#### 3.微内核操作系统的优点
+
+- 提高了系统的可扩展性
+- 增强了系统的可靠性
+- 可移植性强
+- 提供了对分布式系统的支持
+- 融入了面向对象技术
+
+#### 4.微内核操作系统存在的问题
