--- a/notes/2 进程与线程.md
+++ b/notes/2 进程与线程.md
@@ -99,3 +99,18 @@
 #### 2.优先级调度算法(可以是抢占的，也可以是非抢占的)：
 
 优先级越高越先分配到CPU，相同优先级先到先服务，存在的主要问题是：低优先级进程无穷等待CPU，会导致无穷阻塞或饥饿；
+
+#### 3.多级队列调度算法：
+
+将就绪队列分成多个独立的队列，每个队列都有自己的调度算法，队列之间采用固定优先级抢占调度。其中，一个进程根据自身属性被永久地分配到一个队列中。
+
+#### 4.多级反馈队列调度算法：
+
+目前公认较好的调度算法；设置多个就绪队列并为每个队列设置不同的优先级，第一个队列优先级最高，其余依次递减。优先级越高的队列分配的时间片越短，进程到达之后按FCFS放入第一个队列，如果调度执行后没有完成，那么放到第二个队列尾部等待调度，如果第二次调度仍然没有完成，放入第三队列尾部…。只有当前一个队列为空的时候才会去调度下一个队列的进程。与多级队列调度算法相比，其允许进程在队列之间移动：若进程使用过多CPU时间，那么它会被转移到更低的优先级队列；在较低优先级队列等待时间过长的进程会被转移到更高优先级队列，以防止饥饿发生。
+
+## 2.5 经典IPC问题
+
+### 2.5.1 哲学家就餐问题
+
+### 2.5.2 读者写者问题
+
